testsuites/LLT/compiler/Diagnose/lex_test/lex_illegal_content_in_interpolation/case1.expect.out
error: unterminated string interpolation
  ==> case1.cj:14:11:
   | 
14 |     "cangjie ${a + b /* comments */ /*}"
   |     ~        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unterminated string interpolation
   |     |
   |     because it is in single-line string
   | 

1 error generated, 1 error printed.
